# aegis402

./: .env.example  .gitignore  ACCOUNTS.md  BUIDL_FORM.md  DEMO_SCRIPT.md  DESCRIBE.md  DESIGN.md  README.md  package-lock.json  package.json  tsconfig.base.json
contract/: Cargo.toml  Odra.toml  README.md
contract/src/: lib.rs
demo/: demo.ts
onchain/: ATTRIBUTION.md  attest.ts  deploy-registry.ts  deploy-token.ts  e2e-real.ts  settle-test.ts
oracle/: package.json
oracle/src/: config.ts  facilitator.ts  server.ts  signals.ts  x402-middleware.ts
oracle/test/: flow.test.ts
shared/: package.json
shared/src/: attest.ts  index.ts  verdict.ts  x402.ts
shared/test/: verdict.test.ts
skill/: package.json
skill/src/: action.ts  index.ts  langchain.ts  mcp.ts  signer.ts  skill.ts  spike.ts  x402-client.ts
skill/src/eip712/: ATTRIBUTION.md  domain.ts  encoding.ts  hash.ts  index.ts  keccak.ts  type-hash.ts  type-string.ts  types.ts  utils.ts
skill/src/eip712/prebuilt/: approval.ts  index.ts  permit.ts  transfer-authorization.ts  transfer.ts
skill/test/: buyer-oracle.test.ts
