[package]
edition = "2021"
name = "aegis_registry"
version = "0.1.0"

[dependencies]
odra = { version = "2.8.1", default-features = false }
odra-modules = { version = "2.8.1", default-features = false }

[dev-dependencies]
odra-test = "2.8.1"

[build-dependencies]
odra-build = "2.8.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2.8.1"
odra-cli = "2.8.1"

[[bin]]
name = "aegis_registry_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "aegis_registry_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "aegis_registry_cli"
path = "bin/cli.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
